version 1.5.xx (2013-11-12)
	+ Incorporating biome format support with the biom2MRexperiment and load_biome function.
	+ Added filterData, aggregateByTaxonomy(aggTax), calculateEffectiveSamples, functions.
	+ Renamed MRfisher to fitPA (presence-absence fisher test).
	+ Added match.call() info to fitZig output
version 1.2.xx (2013-08-20)
	+ Our paper got accepted and is available!
        + Added methods for MRexperiment objects (colSums,colMeans,rowSums,rowMeans, usage is for example colSums(obj) or colSums(obj,norm=TRUE)) (09-25)
        + Added two new functions, plotOrd and plotRare - a function to plot PCA/MDS coordinates and rarefaction effect (09-04,09-18)
        + Updated MRfisher to include thresholding for presence-absence testing (08-19)	
	+ Updated comments (roxygen2) style for all the functions using the Rd2roxygen package (07-13)
	+ Updated plotCorr and plotMRheatmap to allow various colors/not require trials(07-13)
	+ Rewrote vignette (and switched to knitr) 

version 1.1.xx (last update 2013-06-25)	
	+ Rewrote load_meta and load_metaQ to be faster/use less memory
	+ Modified cumNormStat to remove NA samples from calculations (example would be samples without any counts)
	+ Re-added plotGenus' jitter
	+ Fixed uniqueNames call in the MR tables

	+ Changed thanks to Kasper Daniel Hansen's suggestions the following:
		plotOTU and plotGenus both have much better auto-generated axis
		MRtable, MRfulltable, MRcoefs have a sort by p-value option now
		MRtable, MRfulltable, MRcoefs now have an extra option to include unique numbers for OTU features (default would automatically add them previously)
		cumNorm.R - now returns the object as well - not just replacing the environment
	0 Still need to turn the fitZig output to S3, consider subsetting function address low p-values

version 1.0.0: (2013-03-29)
	+ Release!