@@ -1,6 +1,6 @@
 Package: metagenomeSeq
 Title: Statistical analysis for sparse high-throughput sequencing
-Version: 1.5.29
+Version: 1.5.30
 Date: 2013-12-13
 Author: Joseph Nathaniel Paulson, Mihai Pop,  Hector Corrada Bravo
 Maintainer: Joseph N. Paulson <jpaulson@umiacs.umd.edu>
@@ -41,8 +41,10 @@ Collate:
     'doEStep.R'
     'exportMat.R'
     'exportStats.R'
-    'fitZig.R'
+    'fitDO.R'
+    'fitMeta.R'
     'fitPA.R'
+    'fitZig.R'
     'filterData.R'
     'getEpsilon.R'
     'getCountDensity.R'
